2024-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.7.1 released

	* tramp-tests.el (tramp--test-deftest-without-file-attributes):
	New defmacro.
	(tramp-test18-file-attributes-without-file-attributes)
	(tramp-test19-directory-files-and-attributes-without-file-attributes)
	(tramp-test18-file-attributes-without-file-attributes)
	(tramp-test42-utf8-without-file-attributes): New tests.

2024-06-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-shell-file-name):
	Use connection-local value.
	(tramp--test-shell-command-switch): New defun.
	(tramp-test28-process-file)
	(tramp-test34-explicit-shell-file-name): Use it.
	(tramp--test-supports-processes-p): Simplify.
	(tramp--test-check-files): Use `tramp-compat-seq-keep'.
	(tramp-test45-asynchronous-requests): Don't let-bind `shell-file-name'.
	(tramp-test45-asynchronous-requests): Adjust timer.
	(tramp-test45-asynchronous-requests): Add another test message.

2024-05-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-box-p): Rename from
	`tramp--test-toolbox-p'.  Add distrobox.  Adapt callees.

2024-05-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-deftest-direct-async-process):
	Don't suppress internal sentinel.
	(tramp-test32-shell-commanddirect-async): Don't tag it :unstable.

2024-05-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (comp-warn-primitives): Declare.
	(tramp-test18-file-attributes): Use it.

2024-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-container-p): Add "kubernetes",
	"run0" and "nspawn".
	(tramp--test-toolbox-p): New defun.
	(tramp-test45-asynchronous-requests): Use it.
	(tramp--test-check-files): Adapt regexp.

2024-05-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-deftest-direct-async-process):
	Use connection-local-variable `tramp-direct-async-process'.

2024-05-08  Michael Albinus  <michael.albinus@gmx.de>
