@@ -1,3 +1,9 @@
+2024-07-07  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test01-file-name-syntax)
+	(tramp-test01-file-name-syntax-simplified)
+	(tramp-test01-file-name-syntax-separate): Adapt tests.
+
 2024-06-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.7.1 released
